--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				grid-row:4/-1;
 			}
 		</style>
-		<link rel="stylesheet" href="CSS/style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	
 	<body>
@@ -38,7 +38,7 @@
 			<div class="header item">
 				<div class="logo">
 					<div class="center">
-						<img src="image/Ainjee logo.png">
+						<img src="Ainjee logo.png">
 					</div>
 				</div>
 				<div class="navBar">
@@ -68,7 +68,7 @@
 				<div class="headmain">
 					<div class="center">
 						<h1>AINJEE DIAGNOSTICS
-							<img src="image/Machine.png">
+							<img src="Machine.png">
 						</h1>
 						<p>Lorem ipsum dolor sit amet, 
 						consectetur adipiscing elit, sed do eiusmod 
@@ -81,7 +81,7 @@
 			
 			<div class="content">
 				<div class="center">
-					<img src="image/work.png" alt="work">
+					<img src="work.png" alt="work">
 					<h1>Content Title</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 					sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -99,7 +99,7 @@
 					<a href="#">
 						<div class="shade"></div>
 					</a>
-					<img src="image/slider1.jpg">
+					<img src="slider1.jpg">
 					<div class="banner">
 						<p class="tag">Career</p>
 						<h1>Content Title</h1>
@@ -113,7 +113,7 @@
 					<a href="#">
 						<div class="shade"></div>
 					</a>
-					<img src="image/slider2.jpg">
+					<img src="slider2.jpg">
 					<div class="banner">
 						<p class="tag">Research</p>
 						<h1>Content Title</h1>
@@ -127,7 +127,7 @@
 					<a href="#">
 						<div class="shade"></div>
 					</a>
-					<img src="image/slider3.jpg">
+					<img src="slider3.jpg">
 					<div class="banner">
 						<p class="tag">Research</p>
 						<h1>Content Title</h1>
@@ -152,25 +152,25 @@
 					<ul class="media">
 						<li>
 							<a href="#">
-								<img src="image/twitter.png">		
+								<img src="twitter.png">		
 								<div class="twitter"></div>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<img src="image/facebook.png">
+								<img src="facebook.png">
 								<div class="facebook"></div>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<img src="image/instagram.png">
+								<img src="instagram.png">
 								<div class="instagram"></div>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<img src="image/linkedin.png">
+								<img src="linkedin.png">
 								<div class="linkedin"></div>
 							</a>
 						</li>
